--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@
 CONTEXT7_API_KEY=
 SUPABASE_ACCESS_TOKEN=
 OPENAI_API_KEY=
+
+# App runtime env vars (Vite exposes only VITE_* vars to client code).
+VITE_APP_NAME=codex-vue-starter
+VITE_API_BASE_URL=http://localhost:3000
