--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -6,12 +6,19 @@ on:
     branches: [main]
 
 jobs:
-  review-scripts-smoke:
+  verify:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
       - run: npm ci
-      - run: npm run review:dispatch || true
+      - run: npm run format:check
+      - run: npm run lint:check
+      - run: npm run typecheck
+      - run: npm run test
+      - run: npm run test:coverage
+      - run: npm run test:e2e
+      - run: npm run review:dispatch
