--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
 		"format:check": "biome check .",
 		"lint:check": "biome check .",
 		"typecheck": "vue-tsc --noEmit",
-		"test": "vitest run --passWithNoTests",
-		"test:coverage": "vitest run --coverage --passWithNoTests",
-		"test:e2e": "playwright test --pass-with-no-tests",
+		"test": "vitest run",
+		"test:coverage": "vitest run --coverage",
+		"test:e2e": "playwright test",
 		"review:dispatch": "bash scripts/review-dispatch.sh",
 		"review:base": "bash scripts/review-run-all.sh --mode base",
 		"review:uncommitted": "bash scripts/review-run-all.sh --mode uncommitted",
@@ -28,10 +28,11 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
 		"@playwright/test": "^1.55.0",
-    "@tailwindcss/vite": "^4.1.12",
-    "@types/node": "^24.3.0",
-    "@vitejs/plugin-vue": "^6.0.1",
+		"@tailwindcss/vite": "^4.1.12",
+		"@types/node": "^24.3.0",
+		"@vitejs/plugin-vue": "^6.0.1",
 		"@vitest/coverage-v8": "^3.2.4",
+		"@vue/test-utils": "^2.4.6",
 		"jsdom": "^26.1.0",
 		"shadcn-vue": "^2.4.3",
 		"tailwindcss": "^4.1.12",
