Initial set of database tables and ingestion scripts from CCL created

--- a/package.json
+++ b/package.json
@@ -1,44 +1,61 @@
 {
-	"name": "codex-vue-starter",
-	"private": true,
-	"version": "0.1.0",
-	"description": "Starter template for Vite + Vue 3 + Tailwind 4 + shadcn-vue projects using a Codex agent-engineering workflow.",
-	"type": "module",
-	"scripts": {
-		"setup": "bash scripts/setup.sh",
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview",
-		"format": "biome format --write .",
-		"format:check": "biome check .",
-		"lint:check": "biome check .",
-		"typecheck": "vue-tsc --noEmit",
-		"test": "vitest run",
-		"test:coverage": "vitest run --coverage",
-		"test:e2e": "playwright test",
-		"review:dispatch": "bash scripts/review-dispatch.sh",
-		"review:base": "bash scripts/review-run-all.sh --mode base",
-		"review:uncommitted": "bash scripts/review-run-all.sh --mode uncommitted",
-		"review:full": "bash scripts/review-run-all.sh --mode full"
-	},
-	"dependencies": {
-		"pinia": "^3.0.3",
-		"vue": "^3.5.18"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "^1.9.4",
-		"@playwright/test": "^1.55.0",
-		"@tailwindcss/vite": "^4.1.12",
-		"@types/node": "^24.3.0",
-		"@vitejs/plugin-vue": "^6.0.1",
-		"@vitest/coverage-v8": "^3.2.4",
-		"@vue/test-utils": "^2.4.6",
-		"jsdom": "^26.1.0",
-		"shadcn-vue": "^2.4.3",
-		"tailwindcss": "^4.1.12",
-		"typescript": "^5.9.2",
-		"vite": "^7.1.3",
-		"vitest": "^3.2.4",
-		"vue-tsc": "^3.1.0"
-	}
+  "name": "codex-vue-starter",
+  "private": true,
+  "version": "0.1.0",
+  "description": "Starter template for Vite + Vue 3 + Tailwind 4 + shadcn-vue projects using a Codex agent-engineering workflow.",
+  "type": "module",
+  "scripts": {
+    "setup": "bash scripts/setup.sh",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "format": "biome format --write .",
+    "format:check": "biome check .",
+    "lint:check": "biome check .",
+    "typecheck": "vue-tsc --noEmit",
+    "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:e2e": "playwright test",
+    "review:dispatch": "bash scripts/review-dispatch.sh",
+    "review:base": "bash scripts/review-run-all.sh --mode base",
+    "review:uncommitted": "bash scripts/review-run-all.sh --mode uncommitted",
+    "review:full": "bash scripts/review-run-all.sh --mode full",
+    "ingest:crossclub": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap all",
+    "ingest:crossclub:weekly": "node --experimental-strip-types scripts/ingest-crossclub.ts weekly all",
+    "ingest:crossclub:players": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap players",
+    "ingest:crossclub:standings": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap standings",
+    "ingest:crossclub:teams": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap teams",
+    "ingest:crossclub:matchups": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap matchups",
+    "ingest:crossclub:playoffs": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap playoff-matchups",
+    "ingest:crossclub:details": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap details",
+    "ingest:crossclub:details:weekly": "node --experimental-strip-types scripts/ingest-crossclub.ts weekly details",
+    "ingest:crossclub:dry-run": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap all --dry-run",
+    "ingest:crossclub:details:strict": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap details --strict-dependency-guard",
+    "ingest:crossclub:details:weekly:strict": "node --experimental-strip-types scripts/ingest-crossclub.ts weekly details --strict-dependency-guard"
+  },
+  "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.564.0",
+    "pinia": "^3.0.3",
+    "tailwind-merge": "^3.4.0",
+    "vue": "^3.5.18"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.3.15",
+    "@playwright/test": "^1.55.0",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/node": "^25.2.3",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^4.0.18",
+    "@vue/test-utils": "^2.4.6",
+    "jsdom": "^28.0.0",
+    "shadcn-vue": "^2.4.3",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
+    "vitest": "^4.0.8",
+    "vue-tsc": "^3.1.0"
+  }
 }
