--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,15 @@ OPENAI_API_KEY=
 # App runtime env vars (Vite exposes only VITE_* vars to client code).
 VITE_APP_NAME=codex-vue-starter
 VITE_API_BASE_URL=http://localhost:3000
+
+# CrossClub ingest (step 2)
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+CROSSCLUB_CHUNK_SIZE=2
+CROSSCLUB_DELAY_MS=600
+CROSSCLUB_RETRY_ATTEMPTS=3
+CROSSCLUB_RETRY_BASE_DELAY_MS=500
+CROSSCLUB_RETRY_JITTER_RATIO=0.2
+CROSSCLUB_LAT=40.2202
+CROSSCLUB_LNG=-74.7642
+CROSSCLUB_WEEKLY_WINDOW_DAYS=120
