Initial data ingestion complete

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,5 @@
 # Copy to .env (or export in your shell) and fill values.
-CONTEXT7_API_KEY=
 SUPABASE_ACCESS_TOKEN=
-OPENAI_API_KEY=
 
 # App runtime env vars (Vite exposes only VITE_* vars to client code).
 VITE_APP_NAME=codex-vue-starter
@@ -18,3 +16,5 @@ CROSSCLUB_RETRY_JITTER_RATIO=0.2
 CROSSCLUB_LAT=40.2202
 CROSSCLUB_LNG=-74.7642
 CROSSCLUB_WEEKLY_WINDOW_DAYS=120
+CROSSCLUB_REGION_FILTER=
+CROSSCLUB_DIVISION_FILTER=
