--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "review:base": "bash scripts/review-run-all.sh --mode base",
     "review:uncommitted": "bash scripts/review-run-all.sh --mode uncommitted",
     "review:full": "bash scripts/review-run-all.sh --mode full",
-    "ingest:crossclub": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap all",
-    "ingest:crossclub:weekly": "node --experimental-strip-types scripts/ingest-crossclub.ts weekly all",
-    "ingest:crossclub:players": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap players",
-    "ingest:crossclub:standings": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap standings",
-    "ingest:crossclub:teams": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap teams",
-    "ingest:crossclub:matchups": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap matchups",
-    "ingest:crossclub:playoffs": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap playoff-matchups",
-    "ingest:crossclub:details": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap details",
-    "ingest:crossclub:details:weekly": "node --experimental-strip-types scripts/ingest-crossclub.ts weekly details",
-    "ingest:crossclub:dry-run": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap all --dry-run",
-    "ingest:crossclub:details:strict": "node --experimental-strip-types scripts/ingest-crossclub.ts bootstrap details --strict-dependency-guard",
-    "ingest:crossclub:details:weekly:strict": "node --experimental-strip-types scripts/ingest-crossclub.ts weekly details --strict-dependency-guard"
+    "ingest:help": "node --experimental-strip-types data-ingestion/run.ts --help",
+    "ingest:crossclub": "node --experimental-strip-types data-ingestion/run.ts bootstrap all",
+    "ingest:crossclub:weekly": "node --experimental-strip-types data-ingestion/run.ts weekly all",
+    "ingest:crossclub:players": "node --experimental-strip-types data-ingestion/run.ts bootstrap players",
+    "ingest:crossclub:standings": "node --experimental-strip-types data-ingestion/run.ts bootstrap standings",
+    "ingest:crossclub:teams": "node --experimental-strip-types data-ingestion/run.ts bootstrap teams",
+    "ingest:crossclub:matchups": "node --experimental-strip-types data-ingestion/run.ts bootstrap matchups",
+    "ingest:crossclub:playoffs": "node --experimental-strip-types data-ingestion/run.ts bootstrap playoff-matchups",
+    "ingest:crossclub:details": "node --experimental-strip-types data-ingestion/run.ts bootstrap details",
+    "ingest:crossclub:details:weekly": "node --experimental-strip-types data-ingestion/run.ts weekly details",
+    "ingest:crossclub:dry-run": "node --experimental-strip-types data-ingestion/run.ts bootstrap all --dry-run",
+    "ingest:crossclub:details:strict": "node --experimental-strip-types data-ingestion/run.ts bootstrap details --strict-dependency-guard",
+    "ingest:crossclub:details:weekly:strict": "node --experimental-strip-types data-ingestion/run.ts weekly details --strict-dependency-guard",
+    "ingest:sqlite:init": "node --experimental-strip-types data-ingestion/sqlite/init.ts",
+    "ingest:sqlite:mock": "node --experimental-strip-types data-ingestion/sqlite/run-mock.ts bootstrap all",
+    "ingest:sqlite:verify": "node --experimental-strip-types data-ingestion/sqlite/verify.ts"
   },
   "dependencies": {
     "class-variance-authority": "^0.7.1",
@@ -45,10 +49,12 @@
     "@biomejs/biome": "^2.3.15",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^25.2.3",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vitest/coverage-v8": "^4.0.18",
     "@vue/test-utils": "^2.4.6",
+    "better-sqlite3": "^12.6.2",
     "jsdom": "^28.0.0",
     "shadcn-vue": "^2.4.3",
     "tailwindcss": "^4.1.12",
