--- a/biome.json
+++ b/biome.json
@@ -1,13 +1,14 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+	"$schema": "https://biomejs.dev/schemas/2.3.15/schema.json",
 	"files": {
-		"ignore": [
-			"coverage/**",
-			"test-results/**",
-			"playwright-report/**",
-			"dist/**",
-			".vite/**",
-			"validation_screenshots/**"
+		"includes": [
+			"**",
+			"!coverage/**",
+			"!test-results/**",
+			"!playwright-report/**",
+			"!dist/**",
+			"!.vite/**",
+			"!validation_screenshots/**"
 		]
 	}
 }
