--- a/biome.json
+++ b/biome.json
@@ -1,14 +1,34 @@
 {
 	"$schema": "https://biomejs.dev/schemas/2.3.15/schema.json",
+	"css": {
+		"parser": {
+			"tailwindDirectives": true
+		}
+	},
+	"assist": {
+		"actions": {
+			"source": {
+				"organizeImports": "off"
+			}
+		}
+	},
+	"linter": {
+		"rules": {
+			"correctness": {
+				"noUnusedImports": "off",
+				"noUnusedVariables": "off"
+			}
+		}
+	},
 	"files": {
 		"includes": [
 			"**",
-			"!coverage/**",
-			"!test-results/**",
-			"!playwright-report/**",
-			"!dist/**",
-			"!.vite/**",
-			"!validation_screenshots/**"
+			"!coverage",
+			"!test-results",
+			"!playwright-report",
+			"!dist",
+			"!.vite",
+			"!validation_screenshots"
 		]
 	}
 }
