--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"dev": "vite",
 		"build": "vite build",
 		"preview": "vite preview",
+		"worker:dev": "wrangler dev --config worker/wrangler.toml",
+		"worker:deploy:dry": "wrangler deploy --config worker/wrangler.toml --dry-run",
 		"format": "biome format --write .",
 		"format:check": "biome check .",
 		"lint:check": "biome check .",
@@ -38,15 +40,20 @@
 		"ingest:sqlite:verify": "node --experimental-strip-types data-ingestion/sqlite/verify.ts"
 	},
 	"dependencies": {
+		"@langchain/core": "^1.1.24",
+		"@langchain/openai": "^1.2.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"langchain": "^1.2.24",
 		"lucide-vue-next": "^0.564.0",
 		"pinia": "^3.0.3",
 		"tailwind-merge": "^3.4.0",
+		"typeorm": "^0.3.28",
 		"vue": "^3.5.18"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.15",
+		"@cloudflare/workers-types": "^4.20260204.0",
 		"@playwright/test": "^1.55.0",
 		"@tailwindcss/vite": "^4.1.12",
 		"@types/better-sqlite3": "^7.6.13",
@@ -63,5 +70,7 @@
 		"vite": "^7.1.3",
 		"vitest": "^4.0.8",
 		"vue-tsc": "^3.1.0"
+		,
+		"wrangler": "^4.40.2"
 	}
 }
