feat(worker): add environment contract and binding validation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 # Copy to .env (or export in your shell) and fill values.
 SUPABASE_ACCESS_TOKEN=
+OPENAI_API_KEY=
+SUPABASE_DB_URL=
+LLM_MODEL=gpt-4.1-mini
+SQL_QUERY_TIMEOUT_MS=10000
 
 # App runtime env vars (Vite exposes only VITE_* vars to client code).
 VITE_APP_NAME=codex-vue-starter
