--- a/package.json
+++ b/package.json
@@ -40,16 +40,19 @@
 		"ingest:sqlite:verify": "node --experimental-strip-types data-ingestion/sqlite/verify.ts"
 	},
 	"dependencies": {
+		"@langchain/classic": "^1.0.17",
 		"@langchain/core": "^1.1.24",
 		"@langchain/openai": "^1.2.7",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"langchain": "^1.2.24",
 		"lucide-vue-next": "^0.564.0",
+		"pg": "^8.18.0",
 		"pinia": "^3.0.3",
 		"tailwind-merge": "^3.4.0",
 		"typeorm": "^0.3.28",
-		"vue": "^3.5.18"
+		"vue": "^3.5.18",
+		"zod": "^4.3.6"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.15",
@@ -69,8 +72,7 @@
 		"typescript": "^5.9.2",
 		"vite": "^7.1.3",
 		"vitest": "^4.0.8",
-		"vue-tsc": "^3.1.0"
-		,
+		"vue-tsc": "^3.1.0",
 		"wrangler": "^4.40.2"
 	}
 }
