--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"@tailwindcss/vite": "^4.1.12",
 		"@types/better-sqlite3": "^7.6.13",
 		"@types/node": "^25.2.3",
+		"@types/pg": "^8.16.0",
 		"@vitejs/plugin-vue": "^6.0.1",
 		"@vitest/coverage-v8": "^4.0.18",
 		"@vue/test-utils": "^2.4.6",
