--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
     "lucide-vue-next": "^0.564.0",
     "pg": "^8.18.0",
     "pinia": "^3.0.3",
+    "playwright-extra": "^4.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "tailwind-merge": "^3.4.0",
     "typeorm": "^0.3.28",
     "vue": "^3.5.18",
