--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@opentelemetry/sdk-node": "^0.212.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jose": "^6.1.3",
     "langchain": "^1.2.24",
     "lucide-vue-next": "^0.564.0",
     "pg": "^8.18.0",
@@ -62,6 +63,7 @@
     "tailwind-merge": "^3.4.0",
     "typeorm": "^0.3.28",
     "vue": "^3.5.18",
+    "vue-router": "^5.0.3",
     "zod": "^4.3.6"
   },
   "devDependencies": {
